ajustes-home-staff

--- a/wp-content/themes/miradas/scss/abstracts/_variables.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_variables.scss
@@ -15,6 +15,11 @@ $grey: #EEEEEE !default;
 $white: #ffffff !default;
 $black: #000 !default;
 $light-green:#b6d133 !default;
+/* Colores logo */
+$violet:#F9CEEA !default;
+$pink:#FBD9D0 !default;
+$dark-green:#D2E7A2 !default;
+
 
 
 /// @type Length
