--- a/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
+++ b/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
@@ -7,6 +7,10 @@
         max-height: 100%;
     }
 
+    @include responsive ('mobile-h') {
+        height: 600px;
+    }
+
     &::before {
         content: '';
         @include absolute();
