--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -50,7 +50,8 @@ Text Domain: twentysixteen
   'blocks/_buttons',
   'blocks/_video',
   'blocks/_que_ofrecemos',
-  'blocks/_image_with_text';
+  'blocks/_image_with_text',
+  'blocks/_nuestro_equipo';
 
   // Posts
   @import
