--- a/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
+++ b/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
@@ -8,18 +8,21 @@
   &__layout__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column: 40px;
+    grid-gap: 40px;
+
+    @include responsive ('tablet-h') {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__item {
-    border: 1px solid red;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 
     figure {
-      height: 250px;
+      height: 350px;
       width: 100%;
       overflow: hidden;
       border-radius: 3px;
@@ -30,12 +33,14 @@
         width: 100%;
         height: 100%;
         transition: all 0.3s ease-out;
+        object-fit: cover;
+        display: block;
       }
     }
 
     .overlay-text {
       @include center-position();
-      background: rgba(11,103,123,0.6);
+      background: rgba(249, 206, 234, 0.85);
       transition: all 0.3s ease-out;
       opacity: 0;
       text-align: center;
@@ -52,16 +57,16 @@
   }
 
   &__title {
-    @include h4();
+    @include h3();
     color: $third-color;
   }
 
   &__description {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.3;
     color: $primary-color;
     font-weight: 400;
-    margin-top: 20px;
+    margin-top: 40px;
     transition: all 0.3s ease-out;
   }
 }
