--- a/wp-content/themes/miradas/scss/hero/_simple.scss
+++ b/wp-content/themes/miradas/scss/hero/_simple.scss
@@ -4,9 +4,9 @@
     position: relative;
 
     .container_big {
-        text-align: left;
+        text-align: center;
         position: absolute;
-        top: 50%;
+        bottom: 0;
         left: 0;
         transform: translate(0, -50%);
         padding: 0 186px;
@@ -64,6 +64,8 @@
         color: $white;
         line-height: 1.2;
         letter-spacing: 5px;
+        font-weight: 700;
+        text-transform: capitalize;
     }
 
     &__text,
