--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -46,6 +46,7 @@ Text Domain: twentysixteen
   'blocks/_gallery',
   'blocks/stay_informed',
   'blocks/logos',
+  'blocks/_popup_equipo',
   'blocks/_contact',
   'blocks/_buttons',
   'blocks/_video',
