--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -3177,6 +3177,7 @@ body.js-popup-active .close_popup {
   font-size: 36px;
   font-family: "Rosario", sans-serif;
   color: #6A2263;
+  font-weight: 700;
 }
 @media only screen and (max-width: 1050px) {
   .que_ofrecemos__title {
@@ -3468,6 +3469,7 @@ body.js-popup-active .close_popup {
   min-height: 500px;
   padding: 20px;
   text-align: center;
+  cursor: pointer;
 }
 .nuestro_equipo__item img {
   border-radius: 50%;
