--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -708,6 +708,73 @@ strong * {
   }
 }
 
+.notas_de_interes__cont {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 40px 1fr 40px 1fr 40px 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+}
+@media only screen and (max-width: 1050px) {
+  .notas_de_interes__cont {
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (max-width: 750px) {
+  .notas_de_interes__cont {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0;
+  }
+}
+.notas_de_interes__cont img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1;
+}
+.notas_de_interes__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
+  outline: 2px solid #F9CEEA;
+  outline-offset: 10px;
+}
+.notas_de_interes__title {
+  font-size: 30px;
+  font-family: "Rosario", sans-serif;
+  margin-bottom: 20px;
+}
+@media only screen and (max-width: 1050px) {
+  .notas_de_interes__title {
+    font-size: 26px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .notas_de_interes__title {
+    font-size: 24px;
+  }
+}
+.notas_de_interes__description {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.notas_de_interes .fuente {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.notas_de_interes .read_more {
+  font-size: 16px;
+}
+
 .site-logo {
   display: block;
   margin-right: 30px;
