--- a/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
+++ b/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
@@ -40,7 +40,7 @@
 
     .overlay-text {
       @include center-position();
-      background: rgba(249, 206, 234, 0.85);
+      //background: rgba(249, 206, 234, 0.90);
       transition: all 0.3s ease-out;
       opacity: 0;
       text-align: center;
@@ -53,6 +53,27 @@
       opacity: 1;
       overflow: visible;
       cursor: pointer;
+    }
+
+    &:nth-child(1) {
+      .overlay-text {
+        background: rgba(210, 231, 162, 0.90);
+        
+      }
+    }
+
+    &:nth-child(2) {
+      .overlay-text {
+        background: rgba(251, 217, 208, 0.90);
+        
+      }
+    }
+
+    &:nth-child(3) {
+      .overlay-text {
+        background: rgba(249, 206, 234, 0.90);
+        
+      }
     }
   }
 
