--- a/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
@@ -39,15 +39,13 @@
       background-color: $dark-green;
       border-radius: 20px;
 
-      .nuestro_equipo__persona {
+      /* .nuestro_equipo__persona {
         color: $white;
-        font-size: 26px;
       }
 
       .nuestro_equipo__especializacion {
         color: $white;
-      }
-
+      } */
     }
   }
 
