--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -49,6 +49,7 @@ Text Domain: twentysixteen
   'blocks/_popup_equipo',
   'blocks/_contact',
   'blocks/_buttons',
+  'blocks/_notas_de_interes',
   'blocks/_video',
   'blocks/_que_ofrecemos',
   'blocks/_image_with_text',
